--- a/src/locales/resources/burnese.json
+++ b/src/locales/resources/burnese.json
@@ -45,23 +45,23 @@
     "referralID": "ရည်ညွှန်း အိုင်ဒီ (ရွေးချယ်နိုင်သည်)",
     
     "loginSuccess": "ဝင်ရောက်မှု အောင်မြင်ပါသည်",
-    "loginSuccessMsg": "{{domainName}}မှ ကြိုဆိုပါသည်",
+    "loginSuccessMsg": "{{websiteName}}မှ ကြိုဆိုပါသည်",
     "close": "ပိတ်ရန်",
 
     "signupSuccess": "စာရင်းသွင်းခြင်း အောင်မြင်ပါသည်",
     "signUpSuccessMsg": "စာရင်းသွင်းခြင်းအောင်မြင်ပါသည်၊ ဝင်ရန်ဆက်လက်လုပ်ဆောင်ပါ",
     "passwordNotMatch": "စကားဝှက် မကိုက်ညီပါ",
 
-    "marqueeText": "{{domainName}}သည် သင့်ကို သင်နှစ်သက်သောလောင်းကစားပွဲများကို သင်၏ဘရောက်ဇာမှ ကစားခွင့်သာမက မိုဘိုင်းအက်ပ်များတွင်လည်း ကစားခွင့်ပေးပါသည်။ ဤသည်မှာ ကျွန်ုပ်တို့မှအသုံးပြုသူများအတွက် မိုဘိုင်းပေါ်တွင် လွယ်ကူစွာ ဝင်ရောက်သုံးစွဲနိုင်အောင် လမ်းကြောင်းကောင်းတစ်ခုဖြစ်သည်။ သင် Android သို့မဟုတ် iOS ပလက်ဖောင်းမဆို လိုက်လျောညီထွေဖြစ်ပါသည်။",
+    "marqueeText": "{{websiteName}}သည် သင့်ကို သင်နှစ်သက်သောလောင်းကစားပွဲများကို သင်၏ဘရောက်ဇာမှ ကစားခွင့်သာမက မိုဘိုင်းအက်ပ်များတွင်လည်း ကစားခွင့်ပေးပါသည်။ ဤသည်မှာ ကျွန်ုပ်တို့မှအသုံးပြုသူများအတွက် မိုဘိုင်းပေါ်တွင် လွယ်ကူစွာ ဝင်ရောက်သုံးစွဲနိုင်အောင် လမ်းကြောင်းကောင်းတစ်ခုဖြစ်သည်။ သင် Android သို့မဟုတ် iOS ပလက်ဖောင်းမဆို လိုက်လျောညီထွေဖြစ်ပါသည်။",
 
-    "trustedOnlineCasinoMalaysia": "ယုံကြည်စိတ်ချရသော အွန်လိုင်းကာစီနို မလေးရှား - {{domainName}}",
-    "aboutUsDesc": "{{domainName}} သည် မလေးရှားတွင် ယုံကြည်စိတ်ချရသော အွန်လိုင်းကာစီနိုဖြစ်ပြီး သန်းနဲ့ချီသော အသုံးပြုသူများရှိသော အာရှဒေသမှဖြစ်သည်။ ကျွန်ုပ်တို့သည် ကစားသူများကို အခြားမိတ်ဆွေကြီးများ၏ဂိမ်းများတွင် ကစားခွင့်ပေးပြီး လျင်မြန်စွာ ထုတ်ယူခြင်း စနစ်ကိုလည်း ပံ့ပိုးပေးပါသည်။",
+    "trustedOnlineCasinoMalaysia": "ယုံကြည်စိတ်ချရသော အွန်လိုင်းကာစီနို မလေးရှား - {{websiteName}}",
+    "aboutUsDesc": "{{websiteName}} သည် မလေးရှားတွင် ယုံကြည်စိတ်ချရသော အွန်လိုင်းကာစီနိုဖြစ်ပြီး သန်းနဲ့ချီသော အသုံးပြုသူများရှိသော အာရှဒေသမှဖြစ်သည်။ ကျွန်ုပ်တို့သည် ကစားသူများကို အခြားမိတ်ဆွေကြီးများ၏ဂိမ်းများတွင် ကစားခွင့်ပေးပြီး လျင်မြန်စွာ ထုတ်ယူခြင်း စနစ်ကိုလည်း ပံ့ပိုးပေးပါသည်။",
 
     "sponsored": "အားပေးသည်",
 
     "usefulInformation": "အသုံးဝင်သော သတင်းအချက်အလက်",
     "mobileApp": "မိုဘိုင်း အက်ပ်",
-    "infoContent1": "{{domainName}} သည် သင့်ကို သင်နှစ်သက်သောလောင်းကစားပွဲများကို သင်၏ဘရောက်ဇာမှ ကစားခွင့်သာမက မိုဘိုင်းအက်ပ်များတွင်လည်း ကစားခွင့်ပေးပါသည်။ ဤသည်မှာ ကျွန်ုပ်တို့မှအသုံးပြုသူများအတွက် မိုဘိုင်းပေါ်တွင် လွယ်ကူစွာ ဝင်ရောက်သုံးစွဲနိုင်အောင် လမ်းကြောင်းကောင်းတစ်ခုဖြစ်သည်။ သင် Android သို့မဟုတ် iOS ပလက်ဖောင်းမဆို လိုက်လျောညီထွေဖြစ်ပါသည်။",
+    "infoContent1": " {{websiteName}} သည် သင့်ကို သင်နှစ်သက်သောလောင်းကစားပွဲများကို သင်၏ဘရောက်ဇာမှ ကစားခွင့်သာမက မိုဘိုင်းအက်ပ်များတွင်လည်း ကစားခွင့်ပေးပါသည်။ ဤသည်မှာ ကျွန်ုပ်တို့မှအသုံးပြုသူများအတွက် မိုဘိုင်းပေါ်တွင် လွယ်ကူစွာ ဝင်ရောက်သုံးစွဲနိုင်အောင် လမ်းကြောင်းကောင်းတစ်ခုဖြစ်သည်။ သင် Android သို့မဟုတ် iOS ပလက်ဖောင်းမဆို လိုက်လျောညီထွေဖြစ်ပါသည်။",
     "securityAndSafety": "လုံခြုံရေးနှင့် စိတ်ချရမှု",
     "infoContent2": "ကျွန်ုပ်တို့၏ ကစားသူများသည် ကျွန်ုပ်တို့၏ အွန်လိုင်းကာစီနိုနှင့် မိုဘိုင်းအက်ပ်မှ လုံခြုံစိတ်ချစွာ အသုံးပြုနိုင်ကြသည်။ ကျွန်ုပ်တို့တွင် ၂ဆင့်အတည်ပြုစနစ်နှင့် ၁၂၈-အဆင့် စနစ်ဖြင့် လုံခြုံစွာ ထောက်ပံ့ထားသောစနစ်တို့ပါဝင်သည်။ ကျွန်ုပ်တို့သည် Gaming Curacao ကဲ့သို့သော အခြားနိုင်ငံပေါင်းများစွာမှ ဂိမ်းလိုင်စင်များရရှိထားပြီးဖြစ်ပါသည်။ အဲဒီကြောင့် ကျွန်ုပ်တို့၏ ကစားသူများသည် ဤကာစီနိုသည် တရားဝင်ပြီး ယုံကြည်စိတ်ချရသည်ကိုသေချာစွာ သိမြင်နိုင်ပါသည်။",
     "paymentMethod": "ငွေပေးချေမှု စနစ်",
@@ -72,7 +72,7 @@
     "latestHighlightVideo": "နောက်ဆုံးရ ထောက်ခံသော ဗီဒီယို",
     "recommended": "အကြံပြုထားသည်",
 
-    "downloadApp": "{{domainName}} အက်ပ်ကို ဒေါင်းလုပ်ဆွဲပါ",
+    "downloadApp": "{{websiteName}} အက်ပ်ကို ဒေါင်းလုပ်ဆွဲပါ",
 
     "suggestionType": "အကြံပြုချက် အမျိုးအစား",
     "gameProblem": "ဂိမ်းပြဿနာ",
