update check hostname

--- a/src/locales/resources/burnese.json
+++ b/src/locales/resources/burnese.json
@@ -9,6 +9,7 @@
     "login": "ဝင်ရန်",
     "signUp": "စာရင်းသွင်းရန်",
     "language": "ဘာသာစကား",
+    "languageUpCap": "ဘာသာစကား",
 
     "home": "ပင်မစာမျက်နှာ",
     "slot": "စလော့အိမ်",
